# llm-code-review

./: .env.example  .gitignore  .ruff.toml  LICENSE  README.md  check_quality.sh  pyproject.toml  pytest.ini  requirements.txt  run_review.py
src/: __init__.py  config.py  main.py
src/models/: __init__.py  models.py
src/parsers/: diff_parser.py  file_classifier.py
src/providers/: base_provider.py  github_provider.py  gitlab_provider.py
src/report/: report_builder.py
src/report/templates/: markdown_template.md
src/reviewers/: __init__.py  base_reviewer.py  gemini_reviewer.py  openai_like_reviewer.py  reviewer_factory.py
src/utils/: gemini_client.py  http.py  logging.py  openai_like_client.py  rate_limit.py
tests/: conftest.py  test_diff_parser.py  test_file_classifier.py  test_github_provider.py  test_gitlab_provider.py  test_report_builder.py
